# randnum-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-push.yaml
src/: main.rs
