[package]
name = "randnum-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = {version = "1.40.0", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }